--- a/Git.Storage.Web/Configs/Setting/setting.config
+++ b/Git.Storage.Web/Configs/Setting/setting.config
@@ -2,8 +2,8 @@
 <Settings>
   
   <setting key="SMTP_SERVER_PORT" value="25"></setting>
-  <setting key="SMTP_SERVER" value="smtp.uicrm.com"></setting>
-  <setting key="MAIL_USERNAME" value="do_not_reply@uicrm.com"></setting>
+  <setting key="SMTP_SERVER" value="smtp.gitwms.com"></setting>
+  <setting key="MAIL_USERNAME" value="do_not_reply@gitwms.com"></setting>
   <setting key="MAIL_PASSWORD" value="doq1w2e3r4"></setting>
   
   <setting key="ENCRYPT_KEY" value="qingyuan"></setting>
